[package]
name = "api"
version = "0.1.0"
authors = ["Fabio Bonelli <fb@fabiobonelli.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-cors= "0.2"
actix-rt= "1.0"
serde = "*"
serde_derive = "*"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "*"
log = "0.4.1"
env_logger = "0.7.1"

[[bin]]
name = "api"
path = "src/main.rs"
